Bug 21742 - vga video output horizontally garbled and vibrate Intel Core HD graphics
Summary: vga video output horizontally garbled and vibrate Intel Core HD graphics
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 high
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-02 08:51 UTC by Zsolt Présing
Modified: 2012-04-18 21:32 UTC (History)
28 users (show)

See Also:
Kernel Version: 2.6.36 - 3.0
Subsystem:
Regression: No
Bisected commit-id:


Attachments
photo about vga output (52 bytes, text/plain)
2010-11-02 08:51 UTC, Zsolt Présing
Details
intel_display.c diff file between 2.6.31.4 and 2.6.31.6 (3.00 KB, patch)
2010-12-01 14:33 UTC, Zsolt Présing
Details | Diff
Photo of vawes on screen (1080p resolution) (46 bytes, text/plain)
2011-01-09 13:47 UTC, Alexey Guseynov
Details
Dell vostro 3300 Ubuntu 10.10 VGA output [800x600 60Hz] (466.58 KB, video/avi)
2011-01-10 19:05 UTC, victrl
Details

Description Zsolt Présing 2010-11-02 08:51:34 UTC
Created attachment 35842 [details]
photo about vga output

Hello,
This bug has been reported here:
https://bugs.freedesktop.org/show_bug.cgi?id=28306
and here:
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/614238

I feel like this problem is actually KMS or drm-intel related because people had very similar issues with ATI cards before 2.6.34 kernel and somebody reported this issue without running X too.
Comment 1 Daniele Dellafiore 2010-11-16 12:29:35 UTC
I can confirm I suffer from this bug which is preventing me to use laptop with any VGA external monitor. i5 core on Dell V3300, Ubuntu 10.10, 2.6.35-22-generic #35-Ubuntu SMP
Comment 2 DanAbel 2010-11-16 13:05:49 UTC
I can also confirm this issue with unusable wavy output on external VGA.
Toshiba C650-19T with i3 Core running Ubuntu Maverick.
I've tested the following kernels, with no change.
2.6.35-23-generic #Ubuntu Repositories
http://kernel.ubuntu.com/~kernel-ppa/mainline/v2.6.36-maverick/
http://kernel.ubuntu.com/~kernel-ppa/mainline/v2.6.37-rc1-maverick/
http://kernel.ubuntu.com/~kernel-ppa/mainline/drm-intel-next/2010-11-15-maverick/
2.6.37-997-generic
Comment 3 Táizel Girão 2010-11-18 02:49:13 UTC
I have a Dell Vostro 3300 with Arch 64, using the GNOME desktop. The problem occurs ever the same way, when I turn on my monitor (a Samsung T190) my video output image (the monitor) is a bit distorted, I tried to select various resolutions and refresh rates and in different forms such as gnome wizard, xorg.conf and adding different modes with xrandr.

The gnome wizard detects all possible options for resolution and refresh for my monitor normally, but no sample image perfectly, this problem also happened with a projector from college, but I remember that in a projector he had functioned normally I can not remember the brand but I remember that the refresh rate was 50, tried to add a resolution at this rate with xrandr but even with that rate the image continued distorted.

Integrated video card, processor Corei5, here's the output of "lspci | grep VGA"

00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 12)

I think that's a kernel problem, it manifests even in the boot screen, before the x and other modules load.
Comment 4 Joel Bastos 2010-11-21 15:06:31 UTC
I also have a dell vostro 3300, Fedora 14, same problem with wavy output on external VGA.


xorg-x11-drv-intel-2.12.0-6.fc14.1.i686
Kernel 2.6.35.6-48.fc14.i686
Comment 5 Bartosz Neuman 2010-11-23 17:56:32 UTC
Same here. Both console and X flickers. Tried 2.6.37-r3, 2.6.36.1 and 2.6.35.9. The machine is Samsung Q330 with i3 core.

00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 02)
Comment 6 Gustavo Padovan 2010-11-24 16:44:47 UTC
I have the same problem in a Dell 3300. If there is some from the video/DRM subsystem interested in fixing this I can help by doing tests and debugging.
Comment 7 Maxime C 2010-11-24 16:48:50 UTC
Same for me with a Dell Vostro 3300. If you need me to test anything, do not hesitate to ask. It's very annoying, this is my only computer and I cannot use my external screen or use any projector...
Comment 8 Guilhem Lettron 2010-11-24 18:21:07 UTC
Same here with a Vostro 3300 and a Vostro 3500. All two BIOS up-to-date.

All two are Core-i5 M450.
Comment 9 Zsolt Présing 2010-12-01 14:31:07 UTC
I have just found this relatively old comment in this bug report, which might be helpful:
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/600407
Gene Moreau wrote on 2010-07-01:	 #2
"I did some testing and it happens between Kernel 2.6.31-16 and 2.6.31-17"

Gene talks about Ubuntu kernel versions. According to the Ubuntu kernel mappings these kernels corresponds to 2.6.31.4 and 2.6.31.6 vanillas.
So I checked the 2 vanilla kernel source, and found differences in drivers/gpu/drm/i915/intel_display.c
I also made a diff file which I will upload here.

There is also a bunch of lines added to this file in 2.6.31.6 which has the following comment:
+	/* Ironlake: try to setup display ref clock before DPLL
+	 * enabling. This is only under driver's control after
+	 * PCH B stepping, previous chipset stepping should be
+	 * ignoring this setting.
+	 */

I dont now at all if this is helpful or not, but hope so.
Comment 10 Zsolt Présing 2010-12-01 14:33:33 UTC
Created attachment 38752 [details]
intel_display.c diff file between 2.6.31.4 and 2.6.31.6

Is it possible that these changes causes this bug?
Comment 11 Gustavo Padovan 2010-12-01 22:13:06 UTC
Have you tested it?
Comment 12 Zsolt Présing 2010-12-02 15:18:17 UTC
Unfortunately I was not able to test it yet because of the lack of time. If I can do some I will let you know.
Comment 13 Zsolt Présing 2010-12-05 11:34:06 UTC
I did some testing.

1) Compiled a 2.6.35 kernel with the 2.6.31.4's i915 driver. The result: when I connect the external VGA and try to use it the computer freezes.

2) When I use the original 2.6.31.4 and boot ubuntu, i get a blinking cursor and nothing happens. However, the screen resolution at this point shows me that i915 driver already loaded.

This did not solve the problem for me. I don't know what else I should try. :\
Comment 14 max.garmash 2010-12-14 06:48:20 UTC
Looks like this affects all Intel HD cards (just refreshing topic to make it more active). I'll add some keywords for people googling their problems.
Intel i915 Intel HD External VGA Monitor Waving Wavy core i3 core i5
Comment 15 Zsolt Présing 2010-12-14 09:41:13 UTC
As I mentioned above, I had very similar problem with some radeon cards before kernel version 2.6.34. I found this bug report which probably reports that bug (already solved):

https://bugs.freedesktop.org/show_bug.cgi?id=27644

It is not impossible, that this one too (with patch):

https://patchwork.kernel.org/patch/84281/

Maybe useful for a developer.
Comment 16 niteshadez 2011-01-09 08:23:49 UTC
I have the same symptoms but for the Intel Arrandale H55 chipset. Kernel version 2.6.37 does not fix the problem yet. If I disable KMS, the problem goes away, but I won't be able to use X. The bug report in intel-gfx's forum is:

https://bugs.freedesktop.org/show_bug.cgi?id=28306
Comment 17 Alexey Guseynov 2011-01-09 13:38:22 UTC
I've tried http://kernel.ubuntu.com/~kernel-ppa/mainline/drm-intel-next/2011-01-08-natty/
It works much better, but still unusable. Now screen can always be initialized an all supported resolutions. No more power saving mode or black screen. But output is still vawy. I've made another photo because on my screen these vawes look different than on Zsolt Présing's photo.
I'm using xserver-xorg-video-intel-2.12.0 because xserver-xorg-video-intel-2.14.0 is not in repositary yet.
Comment 18 Alexey Guseynov 2011-01-09 13:47:39 UTC
Created attachment 42992 [details]
Photo of vawes on screen (1080p resolution)

As you can see there are 1 pixel waves which amplitude is modulated by long waves (tens of pixels long) waves. On lower resolutions waves are smaller, both in length and amplitude.
Comment 19 victrl 2011-01-10 17:57:11 UTC
Dell Vostro 3300 Ubuntu 10.10. waves output on external monitor through VGA.
When switch to low resolution (800x600, 640x480) waves begin move slowly.
Comment 20 victrl 2011-01-10 19:05:34 UTC
Created attachment 43172 [details]
Dell vostro 3300 Ubuntu 10.10 VGA output [800x600 60Hz]

Waves: Dell vostro 3300 Ubuntu 10.10 VGA output [800x600 60Hz]
Comment 21 Thiago Coutinho 2011-01-12 19:39:34 UTC
Same problem here.

Dell Vostro 3300, Archlinux kernel 2.6.36-ARCH


lspci:

00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 12)
Comment 22 Marc Grimme 2011-01-14 14:11:36 UTC
Same problem here:

IBM Thinkpad i410s, Ubuntu 10.04 2.6.32-27-generic x86_64 GNU/Linux

lspci:

00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 02)

But works with an:
IBM Thinkpad i510, Ubuntu 10.04 2.6.32-27-generic x86_64 GNU/Linux

lspci:

00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 02)

Let me know if I can provide any more information that might be helpful.
Comment 23 Julien Jorge 2011-01-14 17:03:32 UTC
FYI a patch has been proposed here: https://bugs.freedesktop.org/show_bug.cgi?id=28306#c48
Comment 25 Javier Jardón 2011-03-07 12:07:07 UTC
Could the status of this bug be changed to REOPENED? Seems that the patch was reverted from the linux-next branch.

From http://lists.freedesktop.org/archives/dri-devel/2011-February/008869.html:

"
The issue is that there is but a single clock source for the outputs, and
we were not correctly handling the cases where we needed both SSC and
non-SSC outputs. As a result the patch caused us to lose sync on external
DP in some configurations, and so I needed to back out the change until we
can fix it correctly.
-Chris
"
Comment 26 Zsolt Présing 2011-04-18 16:31:05 UTC
I just reopen this bug, because according to comment #25 by Javier says patch was reverted.
Currently I don't know any distribution which does not have this bug by default... tested several.
Comment 27 Javier Jardón 2011-07-06 09:52:10 UTC
Still present in kernel 3.0, could someone update the Kernel Version field?
Comment 28 Zsolt Présing 2011-07-06 09:57:11 UTC
kernel version of this bug updated to "2.6.36 - 3.0"
Comment 29 Alexey Guseynov 2011-07-06 10:20:42 UTC
Can existing patch be merged in-to kernel. Kernel with it works BETTER than without. It doesn't totally fix bug: I still can't have two monitors at the same time, but at least I can choose which one to use. It doesn't work good enough too, sometimes I have to make voodoo magic with laptop to make external screen working. But with patch it is possible to make it working and without patch it is not.
Comment 30 James 2011-07-30 12:16:37 UTC
Hello, there has been a patch posted at https://bugs.freedesktop.org/show_bug.cgi?id=38750 for the 3.0 kernel. I have tested it and it fixes the problem for me.
Comment 31 Florian Mickler 2012-01-12 21:19:20 UTC
A patch referencing this bug report has been merged in Linux v3.2-rc1:

commit 99eb6a01e5ac6cf28aadc64e6ff346939874dfd2
Author: Keith Packard <keithp@keithp.com>
Date:   Mon Sep 26 14:29:12 2011 -0700

    drm/i915: Use CK505 as non-SSC source where available
Comment 32 Jesse Barnes 2012-04-18 21:32:49 UTC
Thanks for confirming James.

Note You need to log in before you can comment on or make changes to this bug.